[metadata]
name = torch-tps
version = attr: torch_tps.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Thin Plate Spline implementation with PyTorch
keywords = interpolation, pytorch, machine learning
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelreme/torch-tps
project_urls =

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
include_package_data = False

[options.package_data]
* = py.typed

[options.packages.find]
exclude=
    tests*
